--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -32,7 +32,8 @@
         "faq": "常见问题",
         "theme": "主题",
         "home": "首页",
-        "unit": "単位"
+        "unit": "単位",
+        "eth": "以太币"
     },
     "theme": {
         "dark": "黑色",
